delete: github commit, hardcover; add: goodreads
